# topology

./: README.md  README.rst  snmp_manager.py  topod.py  topologyd.conf  traceroute_manager.py
SC16_topology/: topology.json  topology_test.json
docs/: Makefile
docs/source/: components.rst  conf.py  getting_started.rst  index.rst
ryu/: $  .osiris_main.py.swp  MANIFEST.in  README.md  build_rpms.sh  cleanup.py  lldp_manager.py  lldpd_host_parser.py  osiris_main.py  sc16_topology.py  setup.cfg  setup.py  sls_manager.py  snmp_manager.py  static_resources.py  topology.json  topology.py  traceroute_manager.py
ryu/config/: logging.conf  osiris-sdn-app.conf  static_resources.ini  supervisor.conf
ryu/config/RPM/: centos_postinstall.sh  centos_postuninstall.sh  osiris-sdn.service
ryu/osiris_sdn_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
topologies/: delete_unis.py
topologies/OSiRIS/: osiris_sites.json
topologies/SC16/: topology.json
