[metadata]
name = osiris-sdn-app
summary = Topology Discovery and SDN Control Ryu Application
license = Apache License 2.0
author = Supreeth Shivanand
author-email = osrs-nmal@umich.edu
home-page = http://www.osris.org/
description-file = README.md
platform = any
classifier =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Topic :: System :: Networking
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Operating System :: Unix
keywords =
    topology
    openflow
    NMAL
    OSIRIS

[bdist_rpm]
Release = 1
Group = Applications/Accessories
Requires = python-ryu python-unisrt supervisor
doc_files = MANIFEST.in
            README.md